src/Base/main/default/objects/Experience_Evaluation_Report__c/Experience_Evaluation_Report__c.object-meta.xml
<CustomObject>
    <description>Post analysis of an experience</description>
    <label>Experience Report</label>
    <nameField>
        <displayFormat>EER-{0000}</displayFormat>
        <label>Experience Evaluation Report  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experience Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>