src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Actual_Cost_to_Resolve_w_o_Case_Escalati__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_to_Resolve_w_o_Case_Escalati__c</fullName>
    <label>Cost to Resolve w/o Case Escalation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>