src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Cost_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Incident__c</fullName>
    <description>The overall cost of the incident</description>
    <inlineHelpText>The overall cost of the incident  (Time, effort during the experience by people, departments - use estimates if need be)</inlineHelpText>
    <label>Cost of Incident</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>