src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Cost_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Resolution__c</fullName>
    <description>The cost to resolve the specific issue</description>
    <inlineHelpText>The cost to resolve the specific issue (parts, service, courtesy gestures, exceptions - use estimates if need be)</inlineHelpText>
    <label>Cost of Resolution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>