src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Detailed_Summary__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Summary__c</fullName>
    <description>Summarized detail from Salesforce activities</description>
    <inlineHelpText>Summarized detail from Salesforce activities</inlineHelpText>
    <label>Detailed Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>