src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Executive_Overview__c.field-meta.xml
<CustomField>
    <fullName>Executive_Overview__c</fullName>
    <description>Overview of the incident</description>
    <inlineHelpText>Overview of the incident</inlineHelpText>
    <label>Executive Overview</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>