src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Experience_and_Process_Gaps__c.field-meta.xml
<CustomField>
    <fullName>Experience_and_Process_Gaps__c</fullName>
    <label>Experience and Process Gaps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>