src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Experience_Gaps__c.field-meta.xml
<CustomField>
    <fullName>Experience_Gaps__c</fullName>
    <description>Departments where Gaps were identified in the experience</description>
    <label>Experience Gaps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Dealer Care</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>