src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Impacted_Account__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer account that was impacted</description>
    <inlineHelpText>The customer account that was impacted</inlineHelpText>
    <label>Impacted Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Post_Mortem_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>