src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Pending_Stakeholder_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Pending_Stakeholder_Presentation__c</fullName>
    <label>Pending Stakeholder Presentation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>