src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Potential_Risk__c.field-meta.xml
<CustomField>
    <fullName>Potential_Risk__c</fullName>
    <label>Potential Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>