src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Potential_Risk_Cost__c.field-meta.xml
<CustomField>
    <fullName>Potential_Risk_Cost__c</fullName>
    <label>Potential Risk Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>