src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>How was this incident resolved?</description>
    <inlineHelpText>How was this incident resolved?</inlineHelpText>
    <label>Resolution / Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monetary</fullName>
            </value>
            <value>
                <fullName>Customer Interaction</fullName>
            </value>
            <value>
                <fullName>Process Exception</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>