src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Root_cause_areas_of_concern__c.field-meta.xml
<CustomField>
    <fullName>Root_cause_areas_of_concern__c</fullName>
    <label>Root Cause - Areas of Concern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>