src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of Post Mortem&apos;s experience</description>
    <inlineHelpText>Owner of Post Mortem&apos;s experience</inlineHelpText>
    <label>Stakeholder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Post_Mortem_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>