src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Pending Stakeholder Presentation</fullName>
            </value>
            <value>
                <fullName>Pending L&amp;D</fullName>
            </value>
            <value>
                <fullName>L&amp;D Complete</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>