src/Base/main/default/objects/Experience_Evaluation_Report__c/fields/Steps_to_Resolve_w_o_Case_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Resolve_w_o_Case_Escalation__c</fullName>
    <label>Steps to Resolve w/o Case Escalation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>