src/Base/main/default/objects/Experience_Evaluation_Report__c/listViews/All_Experience_Reports_by_Impact.listView-meta.xml
<ListView>
    <fullName>All_Experience_Reports_by_Impact</fullName>
    <columns>NAME</columns>
    <columns>Potential_Risk_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Impacted_Account__c</columns>
    <columns>Process_Gaps__c</columns>
    <columns>Experience_Gaps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Experience Reports by Impact</label>
    <sharedTo>
        <role>Customer_Experience_Specialist</role>
        <role>Director_of_Support</role>
        <role>Support</role>
    </sharedTo>
</ListView>